# kafka-streaming-app

./: .gitignore  pyproject.toml
data/: normal_msg_sequence.json
src/structured_streaming/: __init__.py  picking_sequence_producer.py  producer.py  simple_consumer.py  simple_producer.py  streaming_aggregation_consumer.py  streaming_consumer.py  word_count.py
tests/: test_structured_streaming.py
